--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "front-end",
+  "name": "test-form",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -11,29 +11,40 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.0",
-    "@angular/cdk": "^8.2.3",
+    "@angular/animations": "^7.2.15",
+    "@angular/cdk": "^7.3.7",
     "@angular/common": "~7.2.0",
     "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
+    "@angular/core": "^7.2.14",
+    "@angular/flex-layout": "^7.0.0-beta.24",
     "@angular/forms": "~7.2.0",
-    "@angular/material": "^8.2.3",
+    "@angular/material": "^7.3.7",
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@types/cordova-plugin-network-information": "^1.3.2",
+    "angular-material": "^1.1.18",
     "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
+    "hammerjs": "^2.0.8",
+    "ng-modules": "^3.0.5",
+    "ng-pick-datetime": "^5.2.6",
+    "node-modules": "^1.0.1",
+    "node-sass": "^4.12.0",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
+    "url-parse": "^1.4.7",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.9",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
+    "@angular/language-service": "^7.2.15",
+    "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
