--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "@google-cloud/storage": "^4.1.2",
     "@types/cordova-plugin-network-information": "^1.3.2",
     "angular-material": "^1.1.18",
     "core-js": "^2.5.4",
+    "downloads-folder": "^1.0.1",
+    "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
     "ng-modules": "^3.0.5",
     "ng-pick-datetime": "^5.2.6",
