complete home.component.html

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/cordova-plugin-network-information": "^1.3.2",
     "angular-material": "^1.1.18",
     "core-js": "^2.5.4",
+    "cors": "^2.8.5",
     "downloads-folder": "^1.0.1",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
