--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angular-material": "^1.1.18",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "mongodb": "^3.3.4",
     "ng-modules": "^3.0.5",
     "ng-pick-datetime": "^5.2.6",
     "ng2-fileupload": "0.0.7",
