--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "downloads-folder": "^1.0.1",
     "file-saver": "^2.0.2",
     "hammerjs": "^2.0.8",
+    "mongodb": "^3.3.4",
     "ng-modules": "^3.0.5",
     "ng-pick-datetime": "^5.2.6",
     "ng2-fileupload": "0.0.7",
@@ -38,8 +39,10 @@
     "node-sass": "^4.12.0",
     "rxjs": "^6.5.3",
     "rxjs-compat": "^6.4.0",
+    "stream": "0.0.2",
     "tslib": "^1.9.0",
     "url-parse": "^1.4.7",
+    "zlib": "^1.0.5",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
@@ -50,6 +53,7 @@
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/mongodb": "^3.3.11",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "cross-env": "^6.0.3",
