--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@google-cloud/storage": "^4.1.2",
+    "@ngtools/webpack": "^1.2.4",
     "@types/cordova-plugin-network-information": "^1.3.2",
     "angular-material": "^1.1.18",
     "core-js": "^2.5.4",
