--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@types/cordova-plugin-network-information": "^1.3.2",
     "angular-material": "^1.1.18",
     "core-js": "^2.5.4",
+    "downloads-folder": "^1.0.2",
     "hammerjs": "^2.0.8",
     "mongodb": "^3.3.4",
     "ng-modules": "^3.0.5",
